--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A schema-based API generator",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:lint": "eslint index.js lib/ --ext js"
   },
   "repository": {
     "type": "git",
