--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "eslint-plugin-prefer-spread": "^1.0.3",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-security": "^1.4.0"
+  },
+  "dependencies": {
+    "ajv": "^8.2.0"
   }
 }
