--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-security": "^1.4.0"
   },
   "dependencies": {
-    "ajv": "^8.2.0"
+    "ajv": "^8.2.0",
+    "ws": "^7.4.5"
   }
 }
