--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "A schema-based API generator",
   "main": "index.js",
+  "bin": {
+    "sbag": "./bin/generate-dts.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:lint": "eslint index.js lib/ --ext js"
@@ -35,6 +38,7 @@
   "dependencies": {
     "ajv": "^8.2.0",
     "ajv-formats": "^2.1.0",
+    "json-schema-to-typescript": "^10.1.4",
     "ws": "^7.4.5"
   }
 }
