--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ajv": "^8.2.0",
     "ajv-formats": "^2.1.0",
     "json-schema-to-typescript": "^10.1.4",
+    "prettier": "^2.3.0",
     "ws": "^7.4.5"
   }
 }
